Fix content height on mobile chrome/safari

--- a/app/views/ReportView/index.scss
+++ b/app/views/ReportView/index.scss
@@ -5,10 +5,11 @@
   &__container {
     display: flex;
     flex-direction: row;
+    height: -webkit-fill-available;
+    height: -moz-available;
   }
 
   &__content {
-    height: calc(100vh - #{$navbar-size} - 57px);
     overflow: auto;
   }
 
@@ -18,6 +19,7 @@
     flex-basis: 0%;
     flex-grow: 1;
     flex-shrink: 1;
+    overflow: auto;
   }
 }
 
